apps/base/transmission/transmission-ingress.yaml
# NOTE: We use ingress here rather than a simple service so we can route traffic
#   based on hostname and not only IP. Ingress also has the advantage of being
#   able to serve TLS.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission-ingress
spec:
  tls:
    - hosts:
        - transmission.jimwilleke.com
      # There must a a Certificate resource created that saves to this secret name
      secretName: transmission-nerdsbythehour-com-tls

  rules:
    - host: transmission.jimwilleke.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-service-web-ui
                # port of the referenced service. A port name or port number is required for a IngressServiceBackend.
                port:
                  name: web-ui
